issue #1018: Align output to the left

--- a/src/styles/components/ArticleV3/ArticleCellFigure.scss
+++ b/src/styles/components/ArticleV3/ArticleCellFigure.scss
@@ -16,7 +16,6 @@ $module: ".ArticleCellFigure";
   .picture {
     position: relative;
     overflow-x: auto;
-    text-align: center;
 
     img {
       height: 100%;
