--- a/src/styles/components/ArticleV3/ArticleCellOutput.scss
+++ b/src/styles/components/ArticleV3/ArticleCellOutput.scss
@@ -12,7 +12,6 @@ $module: ".ArticleCellOutput";
     img {
       max-width: 100%;
       background-color: var(--bs-white);
-      margin: 0 auto;
       display: block;
     }
   }
